* feat: absolute paths and lottie;

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,12 @@
       "warn",
       {
         "newlinesBetween": "always",
-        "groups": ["/^react/", "module", ["parent", "sibling", "index"]],
+        "groups": [
+          "/^react/",
+          "module",
+          "/^@game-crud/",
+          ["parent", "sibling", "index"]
+        ],
         "alphabetize": { "order": "asc", "ignoreCase": true }
       }
     ]
